--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,15 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@zxing/browser": "^0.1.5",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
