--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
