--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "prisma": { "schema": "src/prisma/schema.prisma" },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
+  },
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
@@ -14,19 +16,17 @@
     "prisma:dev": "prisma migrate dev --name init && node prisma/seed.js",
     "check:env": "node -e \"import('dotenv').then(dotenv => dotenv.config()); console.log('DB?', !!process.env.DATABASE_URL, 'JWT?', !!process.env.JWT_SECRET)\""
   },
-
   "engines": {
     "node": ">=20.0.0"
   },
-
-
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.0.3",
     "@fastify/static": "^8.2.0",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
