App Version 0  test force password

--- a/backend/.env.merge
+++ b/backend/.env.merge
@@ -1,2 +1,6 @@
 RENDER_URL="postgresql://gprest_prod_user:ogcHkPaG8lTenjyq0URTIHgTxpbVN7Ki@dpg-d35h7ee3jp1c73c9mq80-a.frankfurt-postgres.render.com/gprest_prod?sslmode=require"
 LOCAL_URL="postgresql://postgres:postgres@127.0.0.1:5432/gprest"  
+
+# export $(grep -v '^#' backend/.env.merge | xargs)
+
+# node backend/src/prisma/from-loc-to-render,js
